Fix overflowing mewtwo problem

--- a/app/assets/stylesheets/trumps/index.scss
+++ b/app/assets/stylesheets/trumps/index.scss
@@ -1,4 +1,8 @@
 .index__desktop {
+  max-width: 100%;
+  overflow: hidden;
+  position: relative;
+
   .centered-block {
     margin: 0 auto;
     width: 1000px;
